update button design

--- a/orbitus-systems/src/app/pages/landing/landing.component.html
+++ b/orbitus-systems/src/app/pages/landing/landing.component.html
@@ -20,8 +20,10 @@
               following projects.</p>
             <div class="d-grid gap-2 d-md-block">
               <a href="https://guildrestore.com/" target="new" class="btn btn-primary">
-                <img class="fa fa-fw me-1" src="assets/img/logo/guildrestore.svg" />
-                Guild Restore
+                <span class="d-flex align-items-center">
+                  <img class="fa fa-fw me-1" src="assets/img/logo/guildrestore.svg" />
+                  Guild Restore
+                </span>
               </a>
             </div>
           </div>
